# 3d-playground

./: .gitignore  README.md
rust/: Cargo.toml
rust/extras/struct-wasm-proxy/: Cargo.toml
rust/extras/struct-wasm-proxy/src/: lib.rs  struct_wasm_proxy.rs
rust/extras/wasm-proxy/: Cargo.toml
rust/extras/wasm-proxy/src/: lib.rs
rust/threedp/: Cargo.toml
rust/threedp/src/: error.rs  lib.rs  model.rs
www/: package.json  vite.config.js
www/src/: index.html  viewer.html
www/src/icons/: panicon.vue
www/src/js/: mount.js  storage.js
www/src/pages/index/: App.vue  main.js
www/src/pages/index/components/: addtool.vue  menutool.vue  modellist.vue  orbittool.vue  selecttool.vue  viewercanvas.vue
www/src/pages/index/components/menutool/: menutoolentry.vue
www/src/pages/viewer/: App.vue
www/src/pages/viewer/components/: viewercanvas.vue
www/src/pages/viewer/components/menutool/: menutoolentry.vue
www/src/pages/viewer/tools/: orbit.js  pan.js  rotate.js  scale.js
