[package]
name = "threedp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extra-rust-wasm = { path = "../extras/extra-rust-wasm", features = [ "wasm" ] }
wasm-bindgen = "0"
wasm-proxy = { path = "../extras/wasm-proxy" }
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
thiserror = { version = "1" }
nanoid = { version = "0" }
getrandom = { version = "0", features = [ "js" ] }

web-sys = { version = "0", features = [ "console", "WebGl2RenderingContext", ] }

